create interpolated particle files to create scavenging forcing with

--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "located-single",
    "metadata": {},
    "outputs": [],
@@ -162,37 +162,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "def5d73e-ab07-4039-b748-d9d9d33703cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def save_file(folder, particle_array, year, month):   \n",
-    "    \n",
-    "#     file_write = xr.Dataset(\n",
-    "#         {'particles' : ((\"deptht\",\"y\",\"x\"), particle_array)},\n",
-    "#         coords = {\n",
-    "#             \"time_counter\": np.zeros(1),\n",
-    "#             \"deptht\": depths,\n",
-    "#             \"y\": np.zeros(mesh_lat.shape[0]),\n",
-    "#             \"x\": np.zeros(mesh_lon.shape[1])},\n",
-    "#     )\n",
-    "#     file_write.to_netcdf(f'{folder}Pb_scavenging_y{year}m{month:02}.nc', \\\n",
-    "#                          unlimited_dims='time_counter')\n",
-    "\n",
-    "#     return\n",
-    "def save_file(folder, particle_array, year, month):   \n",
+    "def save_file(folder, oMn, fpop, fpops, biom, year, month):   \n",
     "    \n",
     "    file_write = xr.Dataset(\n",
-    "        {'oxidisMn' : ((\"deptht\",\"y\",\"x\"), particle_array),\n",
-    "         'fpop'     : ((\"deptht\",\"y\",\"x\"), particle_array),\n",
-    "         'fpop-sink': ((\"deptht\",\"y\",\"x\"), particle_array),\n",
-    "         'biomass'  : ((\"deptht\",\"y\",\"x\"), particle_array)},\n",
+    "        {'oxidisMn' : ((\"deptht\",\"y\",\"x\"), oMn),\n",
+    "         'fpop'     : ((\"deptht\",\"y\",\"x\"), fpop),\n",
+    "         'fpop-sink': ((\"deptht\",\"y\",\"x\"), fpops),\n",
+    "         'biomass'  : ((\"deptht\",\"y\",\"x\"), biom)},\n",
     "        coords = {\n",
     "            \"time_counter\": np.zeros(1),\n",
     "            \"deptht\": depths,\n",
-    "            \"y\": np.zeros(mesh_lat.shape[0]),\n",
-    "            \"x\": np.zeros(mesh_lon.shape[1])},\n",
+    "            \"y\": np.zeros(mesh_lat[imin:imax,jmin:jmax].shape[0]),\n",
+    "            \"x\": np.zeros(mesh_lon[imin:imax,jmin:jmax].shape[1])},\n",
     "    )\n",
     "    file_write.to_netcdf(f'{folder}Pb_scavenging_y{year}m{month:02}.nc', \\\n",
     "                         unlimited_dims='time_counter')\n",
@@ -202,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_bio(year, month, return_max=False, ln_fpop=False, ln_fpop_sink=False, ln_biom=False):\n",
+    "def load_bio(year, month):\n",
     "    # BLING:\n",
     "    file_EPM101  = f'/data/brogalla/ANHA4/BLING-EPM101/ANHA4-EPM101_y{year}m{month:02}.nc'\n",
     "    \n",
@@ -216,23 +202,19 @@
     "        fpop_ANHA4[fpop_ANHA4 < 0]       = 0\n",
     "        fpop_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpop_ANHA4)\n",
     "\n",
-    "        if ln_fpop_sink:\n",
-    "            # Convert sinking particulate organic matter in phosphate units by dividing by the sinking rate:\n",
-    "            # Sinking rate info comes from pg. 43-44 Laura Castro de la Guardia's thesis, same as BLING general paper\n",
-    "            wsink              = np.ones(ANHA4_depths.shape)*16/(3600*24) # convert from m/day to m/s\n",
-    "            wsink[depths > 80] = (0.05*(ANHA4_depths[ANHA4_depths > 80]-80)+16)/(3600*24) \n",
-    "            fpop_ANHA4         = np.array([fpop_ANHA4[d,:,:] / wsink[d] for d in range(0,len(ANHA4_depths))])\n",
-    "            fpop_ANHA4[fpop_ANHA4 < 0]       = 0\n",
-    "            fpop_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpop_ANHA4)\n",
+    "        # Convert sinking particulate organic matter in phosphate units by dividing by the sinking rate:\n",
+    "        # Sinking rate info comes from pg. 43-44 Laura Castro de la Guardia's thesis, same as BLING general paper\n",
+    "        wsink              = np.ones(ANHA4_depths.shape)*16/(3600*24) # convert from m/day to m/s\n",
+    "        wsink[depths > 80] = (0.05*(ANHA4_depths[ANHA4_depths > 80]-80)+16)/(3600*24) \n",
+    "        fpops_ANHA4        = np.array([fpop_ANHA4[d,:,:] / wsink[d] for d in range(0,len(ANHA4_depths))])\n",
+    "        fpops_ANHA4[fpop_ANHA4 < 0]       = 0\n",
+    "        fpops_ANHA4[np.isnan(fpop_ANHA4)] = np.nanmean(fpops_ANHA4)\n",
     "\n",
     "        biop_ANHA4   = dset_bio['biomass_p'][:,:,:].values # biomass concentration in phosphate units (mol P/m3)\n",
     "        biop_ANHA4[biop_ANHA4 < 0]       = 0\n",
     "        biop_ANHA4[np.isnan(biop_ANHA4)] = np.nanmean(biop_ANHA4)\n",
-    "\n",
-    "        if return_max:\n",
-    "            return np.amax(fpop_ANHA4*ln_fpop + fpop_ANHA4*ln_fpop_sink + biop_ANHA4*ln_biom)\n",
-    "        else:\n",
-    "            return fpop_ANHA4*ln_fpop + fpop_ANHA4*ln_fpop_sink + biop_ANHA4*ln_biom\n",
+    "        \n",
+    "        return fpop_ANHA4, fpops_ANHA4, biop_ANHA4\n",
     "\n",
     "def interpolate_bio(bio_particles):\n",
     "    \n",
@@ -245,70 +227,48 @@
     "\n",
     "    return ANHA12_bio\n",
     "\n",
-    "def load_litho(year, month, return_max=False):\n",
+    "def load_litho(year, month):\n",
     "    # Mn for surface particle field:\n",
     "    folder_Mn   = f'/data/brogalla/run_storage/Mn-extended-domain-202210/'\n",
     "    \n",
     "    with xr.open_dataset(f'{folder_Mn}oMn_y{year}m{month:02}.nc') as dset_ANHA12:\n",
     "        ANHA12_Mn   = dset_ANHA12['oxidismn'][:,:,:].values \n",
     "\n",
-    "        if return_max:\n",
-    "            return np.amax(ANHA12_Mn)\n",
-    "        else:\n",
-    "            return ANHA12_Mn"
+    "    return ANHA12_Mn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_particle_fields(year, month, max_bio=np.nan, max_litho=np.nan, save=False, beta=np.nan, power=1,\n",
-    "                           ln_fpop=False, ln_fpop_sink=False, ln_biom=False, loc='', threshold=False):\n",
+    "def create_particle_fields(year, month, save=False, loc=''):\n",
     "    \n",
     "    # load forcing fields and interpolate to ANHA12 grid\n",
-    "    ANHA4_bio       = load_bio(year, month, ln_fpop=ln_fpop, ln_fpop_sink=ln_fpop_sink, ln_biom=ln_biom)\n",
-    "    ANHA12_biogenic = interpolate_bio(ANHA4_bio)\n",
-    "    ANHA12_litho    = load_litho(year, month)\n",
-    "    \n",
-    "    # particles: normalize by maximum value within domain over the course of the full time series\n",
-    "    ANHA12_biogenic = ANHA12_biogenic / max_bio \n",
-    "    ANHA12_litho    = ANHA12_litho / max_litho \n",
-    "    \n",
-    "    # initialize arrays with some small value, then fill with normalized particle fields:\n",
-    "    lithogenic_particles = np.ones(mesh_bathy.shape)*0.001\n",
-    "    biogenic_particles   = np.ones(mesh_bathy.shape)*0.001\n",
-    "    lithogenic_particles[:,imin:imax,jmin:jmax] = ANHA12_litho\n",
-    "    biogenic_particles[:,imin:imax,jmin:jmax]   = ANHA12_biogenic\n",
+    "    ANHA4_fpop, ANHA4_fpops, ANHA4_biom = load_bio(year, month)\n",
+    "    ANHA12_fpop  = interpolate_bio(ANHA4_fpop)\n",
+    "    ANHA12_fpops = interpolate_bio(ANHA4_fpops)\n",
+    "    ANHA12_biom  = interpolate_bio(ANHA4_biom)\n",
+    "    ANHA12_litho = load_litho(year, month)\n",
     "\n",
     "    # Fill any weird values \n",
     "    # https://stackoverflow.com/questions/3662361/fill-in-missing-values-with-nearest-neighbour-in-python-numpy-masked-arrays\n",
-    "    biogenic_particles = fill(biogenic_particles, invalid=(biogenic_particles < 0))\n",
-    "    biogenic_particles[(mesh_bathy < 0.1)]               = 0.0 # fill land with zeros\n",
-    "    lithogenic_particles[(mesh_bathy < 0.1)]             = 0.0 # fill land with zeros\n",
-    "    lithogenic_particles[lithogenic_particles < 0]       = 0.0\n",
-    "    lithogenic_particles[np.isnan(lithogenic_particles)] = 0.0\n",
-    "    \n",
-    "    if np.any(lithogenic_particles < 0):\n",
-    "        print('negative lithogenic')\n",
-    "    if np.any(biogenic_particles < 0):\n",
-    "        print('negative biogenic')\n",
+    "    ANHA12_biom  = fill(ANHA12_biom,  invalid=(ANHA12_biom  < 0))\n",
+    "    ANHA12_fpop  = fill(ANHA12_fpop,  invalid=(ANHA12_fpop  < 0))\n",
+    "    ANHA12_fpops = fill(ANHA12_fpops, invalid=(ANHA12_fpops < 0))\n",
+    "    ANHA12_litho = fill(ANHA12_litho, invalid=(ANHA12_litho < 0))\n",
+    "#     ANHA12_biom[np.isnan(ANHA12_biom)]   = 0.0; ANHA12_fpop[np.isnan(ANHA12_fpop)]   = 0.0;\n",
+    "#     ANHA12_fpops[np.isnan(ANHA12_fpops)] = 0.0; ANHA12_litho[np.isnan(ANHA12_litho)] = 0.0;\n",
+    "#     ANHA12_biom[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)]  = 0.0; ANHA12_fpop[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)]  = 0.0;\n",
+    "#     ANHA12_litho[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)] = 0.0; ANHA12_fpops[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)] = 0.0; \n",
     "    \n",
     "    if save:\n",
-    "        if np.isnan(beta):\n",
-    "            print('need to define beta')\n",
-    "        else:\n",
-    "            folder =f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/{loc}'\n",
-    "            if threshold:\n",
-    "                particles = ((lithogenic_particles*beta) + (biogenic_particles*(1-beta)))**power\n",
-    "                particles[particles < 0.002] = 0.002\n",
-    "                save_file(f'{folder}', particles, year, month)\n",
-    "            else:\n",
-    "                save_file(f'{folder}', ((lithogenic_particles*beta) + (biogenic_particles*(1-beta)))**power, year, month)\n",
+    "        folder =f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/{loc}'\n",
+    "        save_file(f'{folder}', ANHA12_litho, ANHA12_fpop, ANHA12_fpops, ANHA12_biom, year, month)\n",
     "    \n",
-    "    return lithogenic_particles, biogenic_particles"
+    "    return ANHA12_litho, ANHA12_biom"
    ]
   },
   {
@@ -317,81 +277,6 @@
    "metadata": {},
    "source": [
     "#### Calculations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "54e9cb1a-44a6-4db1-a9c9-b05af5bfbbd0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2002\n",
-      "2003\n",
-      "2004\n",
-      "2005\n",
-      "2006\n",
-      "2007\n",
-      "2008\n",
-      "2009\n",
-      "2010\n",
-      "2011\n",
-      "2012\n",
-      "2013\n",
-      "2014\n",
-      "2015\n",
-      "2016\n",
-      "2017\n",
-      "2018\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Maximum value in file: \n",
-    "n=0\n",
-    "max_bio_list   = np.empty((12*17)); max_bio_list[:]  = np.nan;\n",
-    "max_litho_list = np.empty((12*17)); max_litho_list[:] = np.nan;\n",
-    "\n",
-    "for year in range(2002, 2019):\n",
-    "    print(year)\n",
-    "    for month in range(1,13):\n",
-    "        try:\n",
-    "            max_bio = load_bio(year, month, return_max=True, ln_fpop=False, ln_fpop_sink=True, ln_biom=True)\n",
-    "        except:\n",
-    "            max_bio = np.nan; \n",
-    "            \n",
-    "        try:\n",
-    "            max_litho = load_litho(year, month, return_max=True)\n",
-    "        except:\n",
-    "            max_litho = np.nan\n",
-    "              \n",
-    "        max_bio_list[n]   = max_bio          \n",
-    "        max_litho_list[n] = max_litho\n",
-    "        \n",
-    "        n+=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ef111897-7161-4d3e-8906-ad1a25c39ad5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0008186082704924047\n",
-      "1.8331377305003116e-07\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(max(max_bio_list))\n",
-    "print(max(max_litho_list))"
    ]
   },
   {
@@ -404,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "008fe938-ab15-43c1-9a48-06827840a50d",
    "metadata": {},
    "outputs": [
@@ -418,12 +303,7 @@
       "2002 4\n",
       "2002 5\n",
       "2002 6\n",
-      "2002 7\n",
-      "2002 8\n",
-      "2002 9\n",
-      "2002 10\n",
-      "2002 11\n",
-      "2002 12\n"
+      "2002 7\n"
      ]
     }
    ],
@@ -431,9 +311,7 @@
     "for year in range(2002, 2003):\n",
     "    for month in range(1,13):\n",
     "        print(year, month)\n",
-    "        litho, bio = create_particle_fields(year, month, max_bio=8.1861e-4, max_litho=1.83314e-7, save=True, \n",
-    "                                            beta = 0.01, power=0.15, ln_fpop=False, ln_fpop_sink=True, ln_biom=True,\n",
-    "                                            loc  = 'fpops-biom-b001-p015-threshold0002/', threshold=True)"
+    "        litho, bio = create_particle_fields(year, month, save=True, loc = 'base2/')"
    ]
   },
   {
