--- a/paper3/scavenging-trials/scavenging-predictions.ipynb
+++ b/paper3/scavenging-trials/scavenging-predictions.ipynb
@@ -123,6 +123,97 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6329799734648986e-07 4.038564683045331e-10\n",
+      "8.986099864216612e-09 1.2472175958780497e-11\n",
+      "4.8524940211791545e-05 6.684882461396115e-08\n",
+      "0.0006804027943871915 4.243937945089129e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.nanmax(oMn), np.nanmean(oMn))\n",
+    "print(np.nanmax(fpop), np.nanmean(fpop))\n",
+    "print(np.nanmax(fpops), np.nanmean(fpops))\n",
+    "print(np.nanmax(biom), np.nanmean(biom))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_max(year, ln_fpop=False, ln_fpop_sink=True, ln_biomass=True):\n",
+    "    \n",
+    "    oMn   = np.zeros((12,len(mesh_depth),isize,jsize)); fpop  = np.zeros((12,len(mesh_depth),isize,jsize));\n",
+    "    fpops = np.zeros((12,len(mesh_depth),isize,jsize)); biom  = np.zeros((12,len(mesh_depth),isize,jsize));\n",
+    "    for month in range(1,13):\n",
+    "        df = xr.open_dataset(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/base2/Pb_scavenging_y{year}m{month:02}.nc')\n",
+    "        oMn[month-1,:,:,:]   = df['oxidisMn'].values[:,:,:]\n",
+    "        fpop[month-1,:,:,:]  = df['fpop'].values[:,:,:]\n",
+    "        fpops[month-1,:,:,:] = df['fpop-sink'].values[:,:,:]\n",
+    "        biom[month-1,:,:,:]  = df['biomass'].values[:,:,:]\n",
+    "\n",
+    "    litho_max = np.nanmax(oMn[:,:,:,:])    \n",
+    "    print(np.nanmax(oMn), np.nanmean(oMn))\n",
+    "    print(np.nanmax(fpop), np.nanmean(fpop))\n",
+    "    print(np.nanmax(fpops), np.nanmean(fpops))\n",
+    "    print(np.nanmax(biom), np.nanmean(biom))\n",
+    "    bio_max   = np.nanmax(ln_fpop*fpop[:,:,:,:] + ln_fpop_sink*fpops[:,:,:,:] + ln_biomass*biom[:,:,:,:])\n",
+    "    \n",
+    "    return litho_max, bio_max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6329799734648986e-07 4.038564683045331e-10\n",
+      "8.986099864216612e-09 9.020550537414277e-12\n",
+      "4.8524940211791545e-05 4.833486626640461e-08\n",
+      "0.0006009764038026333 3.1648273894309e-06\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1.6329799734648986e-07, 0.0006321907821984496)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc_max(2002)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for year in range(2002,2003):\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -303,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,6 +449,7 @@
     "    \n",
     "    litho_particles_norm = (oMn[:,:,:,:]/np.nanmax(oMn[:,:,:,:]))\n",
     "    bio_particles        = ln_fpop*fpop[:,:,:,:] + ln_fpop_sink*fpops[:,:,:,:] + ln_biomass*biom[:,:,:,:]\n",
+    "    \n",
     "    bio_particles_norm   = bio_particles/(np.nanmax(bio_particles)**(1-power))\n",
     "    bio_particles_norm[bio_particles_norm < 0] = 0\n",
     "    \n",
@@ -369,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
