--- a/paper3/forcing/river-apply-concentrations-to-classification.ipynb
+++ b/paper3/forcing/river-apply-concentrations-to-classification.ipynb
@@ -67,15 +67,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SPM_factor = 1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -84,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SPM_rivers[river_class==1.0] = SPM_factor*261e-6    # glaciers\n",
-    "SPM_rivers[river_class==2.0] = SPM_factor*1.196e-5  # continental\n",
-    "SPM_rivers[river_class==3.0] = SPM_factor*4.08e-6   # other\n",
-    "SPM_rivers[river_class==4.0] = SPM_factor*4.08e-6   # Gulf of Boothia"
+    "SPM_rivers[river_class==1.0] = 261e-6    # glaciers\n",
+    "SPM_rivers[river_class==2.0] = 11.96e-6  # continental\n",
+    "SPM_rivers[river_class==3.0] = 4.08e-6   # other\n",
+    "SPM_rivers[river_class==4.0] = 4.08e-6   # Gulf of Boothia"
    ]
   },
   {
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +131,7 @@
     "         \"x\": np.zeros(1632),\n",
     "    })\n",
     "    \n",
-    "file_write.to_netcdf('/ocean/brogalla/GEOTRACES/data/Pb-202207-forcing/river-forcing-Pb-base-20220713.nc')"
+    "file_write.to_netcdf('/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/river-forcing-Pb-base-20230213.nc')"
    ]
   },
   {
