--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "located-single",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "def5d73e-ab07-4039-b748-d9d9d33703cb",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
    "metadata": {},
    "outputs": [],
@@ -259,10 +259,10 @@
     "    ANHA12_fpop  = fill(ANHA12_fpop,  invalid=(ANHA12_fpop  < 0))\n",
     "    ANHA12_fpops = fill(ANHA12_fpops, invalid=(ANHA12_fpops < 0))\n",
     "    ANHA12_litho = fill(ANHA12_litho, invalid=(ANHA12_litho < 0))\n",
-    "#     ANHA12_biom[np.isnan(ANHA12_biom)]   = 0.0; ANHA12_fpop[np.isnan(ANHA12_fpop)]   = 0.0;\n",
-    "#     ANHA12_fpops[np.isnan(ANHA12_fpops)] = 0.0; ANHA12_litho[np.isnan(ANHA12_litho)] = 0.0;\n",
-    "#     ANHA12_biom[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)]  = 0.0; ANHA12_fpop[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)]  = 0.0;\n",
-    "#     ANHA12_litho[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)] = 0.0; ANHA12_fpops[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)] = 0.0; \n",
+    "    ANHA12_biom[np.isnan(ANHA12_biom)]   = 0.0; ANHA12_fpop[np.isnan(ANHA12_fpop)]   = 0.0;\n",
+    "    ANHA12_fpops[np.isnan(ANHA12_fpops)] = 0.0; ANHA12_litho[np.isnan(ANHA12_litho)] = 0.0;\n",
+    "    ANHA12_biom[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)]  = 0.0; ANHA12_fpop[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)]  = 0.0;\n",
+    "    ANHA12_litho[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)] = 0.0; ANHA12_fpops[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)] = 0.0; \n",
     "    \n",
     "    if save:\n",
     "        folder =f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/{loc}'\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "008fe938-ab15-43c1-9a48-06827840a50d",
    "metadata": {},
    "outputs": [
@@ -303,12 +303,209 @@
       "2002 4\n",
       "2002 5\n",
       "2002 6\n",
-      "2002 7\n"
+      "2002 7\n",
+      "2002 8\n",
+      "2002 9\n",
+      "2002 10\n",
+      "2002 11\n",
+      "2002 12\n",
+      "2003 1\n",
+      "2003 2\n",
+      "2003 3\n",
+      "2003 4\n",
+      "2003 5\n",
+      "2003 6\n",
+      "2003 7\n",
+      "2003 8\n",
+      "2003 9\n",
+      "2003 10\n",
+      "2003 11\n",
+      "2003 12\n",
+      "2004 1\n",
+      "2004 2\n",
+      "2004 3\n",
+      "2004 4\n",
+      "2004 5\n",
+      "2004 6\n",
+      "2004 7\n",
+      "2004 8\n",
+      "2004 9\n",
+      "2004 10\n",
+      "2004 11\n",
+      "2004 12\n",
+      "2005 1\n",
+      "2005 2\n",
+      "2005 3\n",
+      "2005 4\n",
+      "2005 5\n",
+      "2005 6\n",
+      "2005 7\n",
+      "2005 8\n",
+      "2005 9\n",
+      "2005 10\n",
+      "2005 11\n",
+      "2005 12\n",
+      "2006 1\n",
+      "2006 2\n",
+      "2006 3\n",
+      "2006 4\n",
+      "2006 5\n",
+      "2006 6\n",
+      "2006 7\n",
+      "2006 8\n",
+      "2006 9\n",
+      "2006 10\n",
+      "2006 11\n",
+      "2006 12\n",
+      "2007 1\n",
+      "2007 2\n",
+      "2007 3\n",
+      "2007 4\n",
+      "2007 5\n",
+      "2007 6\n",
+      "2007 7\n",
+      "2007 8\n",
+      "2007 9\n",
+      "2007 10\n",
+      "2007 11\n",
+      "2007 12\n",
+      "2008 1\n",
+      "2008 2\n",
+      "2008 3\n",
+      "2008 4\n",
+      "2008 5\n",
+      "2008 6\n",
+      "2008 7\n",
+      "2008 8\n",
+      "2008 9\n",
+      "2008 10\n",
+      "2008 11\n",
+      "2008 12\n",
+      "2009 1\n",
+      "2009 2\n",
+      "2009 3\n",
+      "2009 4\n",
+      "2009 5\n",
+      "2009 6\n",
+      "2009 7\n",
+      "2009 8\n",
+      "2009 9\n",
+      "2009 10\n",
+      "2009 11\n",
+      "2009 12\n",
+      "2010 1\n",
+      "2010 2\n",
+      "2010 3\n",
+      "2010 4\n",
+      "2010 5\n",
+      "2010 6\n",
+      "2010 7\n",
+      "2010 8\n",
+      "2010 9\n",
+      "2010 10\n",
+      "2010 11\n",
+      "2010 12\n",
+      "2011 1\n",
+      "2011 2\n",
+      "2011 3\n",
+      "2011 4\n",
+      "2011 5\n",
+      "2011 6\n",
+      "2011 7\n",
+      "2011 8\n",
+      "2011 9\n",
+      "2011 10\n",
+      "2011 11\n",
+      "2011 12\n",
+      "2012 1\n",
+      "2012 2\n",
+      "2012 3\n",
+      "2012 4\n",
+      "2012 5\n",
+      "2012 6\n",
+      "2012 7\n",
+      "2012 8\n",
+      "2012 9\n",
+      "2012 10\n",
+      "2012 11\n",
+      "2012 12\n",
+      "2013 1\n",
+      "2013 2\n",
+      "2013 3\n",
+      "2013 4\n",
+      "2013 5\n",
+      "2013 6\n",
+      "2013 7\n",
+      "2013 8\n",
+      "2013 9\n",
+      "2013 10\n",
+      "2013 11\n",
+      "2013 12\n",
+      "2014 1\n",
+      "2014 2\n",
+      "2014 3\n",
+      "2014 4\n",
+      "2014 5\n",
+      "2014 6\n",
+      "2014 7\n",
+      "2014 8\n",
+      "2014 9\n",
+      "2014 10\n",
+      "2014 11\n",
+      "2014 12\n",
+      "2015 1\n",
+      "2015 2\n",
+      "2015 3\n",
+      "2015 4\n",
+      "2015 5\n",
+      "2015 6\n",
+      "2015 7\n",
+      "2015 8\n",
+      "2015 9\n",
+      "2015 10\n",
+      "2015 11\n",
+      "2015 12\n",
+      "2016 1\n",
+      "2016 2\n",
+      "2016 3\n",
+      "2016 4\n",
+      "2016 5\n",
+      "2016 6\n",
+      "2016 7\n",
+      "2016 8\n",
+      "2016 9\n",
+      "2016 10\n",
+      "2016 11\n",
+      "2016 12\n",
+      "2017 1\n",
+      "2017 2\n",
+      "2017 3\n",
+      "2017 4\n",
+      "2017 5\n",
+      "2017 6\n",
+      "2017 7\n",
+      "2017 8\n",
+      "2017 9\n",
+      "2017 10\n",
+      "2017 11\n",
+      "2017 12\n",
+      "2018 1\n",
+      "2018 2\n",
+      "2018 3\n",
+      "2018 4\n",
+      "2018 5\n",
+      "2018 6\n",
+      "2018 7\n",
+      "2018 8\n",
+      "2018 9\n",
+      "2018 10\n",
+      "2018 11\n",
+      "2018 12\n"
      ]
     }
    ],
    "source": [
-    "for year in range(2002, 2003):\n",
+    "for year in range(2002, 2019):\n",
     "    for month in range(1,13):\n",
     "        print(year, month)\n",
     "        litho, bio = create_particle_fields(year, month, save=True, loc = 'base2/')"
