create boundary conditions for sensitivity experiments

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -111,12 +111,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modified ANHA12 mesh mask file (http://knossos.eas.ualberta.ca/anha/anhatable.php)\n",
-    "mesh         = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20220317.nc')\n",
+    "mesh         = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "mesh_lon     = np.array(mesh.variables['nav_lon'])\n",
     "mesh_lat     = np.array(mesh.variables['nav_lat'])\n",
     "mesh_bathy   = np.array(mesh.variables['tmask'][0,:,:,:])\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,12 +150,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_LS_BC(bdy_temp, bdy_sal, bdy_depth, mask=False):\n",
-    "    # Pb end-members:\n",
+    "    # Pb end-members: original \n",
     "    BBDW_Pb   = 2e-12  # Baffin Bay deep water Pb\n",
     "    AO_Pb     = 6e-12  # Arctic water Pb\n",
     "    AW_Pb     = 30e-12 # Atlantic water Pb\n",
@@ -164,6 +164,10 @@
     "    BBDW_temp = 2.5    # Baffin Bay deep water temperature \n",
     "    AW_sal    = 35.2   # Atlantic Water salinity\n",
     "    PML_hot_Pb = 30e-12 # summer polar mixed layer Pb\n",
+    "\n",
+    "#     # Pb end-members: sensitivity study\n",
+    "#     AW_Pb     = 35e-12 # Atlantic water Pb\n",
+    "#     AOAW_Pb   = 30e-12 # Arctic-outflow Atlantic water Pb\n",
     "\n",
     "    # Linear interpolate salinity endpoints:\n",
     "    end_sal = [33.0, AW_sal]\n",
@@ -198,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,14 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_HB_BC(bdy_temp, bdy_sal):\n",
-    "    # Pb end-members:\n",
-    "    PML_Pb   = 3e-12   # Polar Mixed Layer Pb\n",
-    "    AL_Pb    = 5e-12   # Atlantic Water Pb\n",
+    "#     # Pb end-members: original\n",
+    "#     PML_Pb   = 3e-12   # Polar Mixed Layer Pb\n",
+    "#     AL_Pb    = 5e-12   # Atlantic Water Pb\n",
+    "\n",
+    "    # Pb end-members: sensitivity experiment\n",
+    "    PML_Pb   = 5e-12   # Polar Mixed Layer Pb\n",
+    "    AL_Pb    = 10e-12   # Atlantic Water Pb\n",
     "    \n",
     "    PML_sal   = 29      # Polar mixed layer salinity max\n",
     "    AL_sal    = 34.8    # Atlantic Water salinity min\n",
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,9 +327,9 @@
     "            \"x4\": np.zeros(np.max(dPb_west_BC.shape))\n",
     "        },\n",
     "    )\n",
-    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202210/increase_ACW/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/Hudson_Bay_sensitivity/Pb_OBC_y{year}m{month:02}.nc', \\\n",
     "                         unlimited_dims='time_counter')\n",
-    "#     file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-202209-forcing/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "#     file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/Labrador_Sea_sensitivity/Pb_OBC_y{year}m{month:02}.nc', \\\n",
     "#                          unlimited_dims='time_counter')\n",
     "    \n",
     "    return"
@@ -336,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -382,72 +390,12 @@
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2010\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2011\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2012\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2013\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2014\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2015\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2016\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2017\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2018\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2019\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2020\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
-      "West BC # of NaNs:  0\n",
-      "2021\n",
-      "North BC # of NaNs: 0\n",
-      "East BC # of NaNs:  0\n",
-      "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n"
      ]
     }
    ],
    "source": [
-    "for year in range(2002,2022):\n",
+    "for year in range(2002,2010):\n",
     "\n",
     "    print(year)\n",
     "    LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
