increase end member concentrations for Arctic Ocean boundary

--- a/paper3/forcing/create-TS-based-BCs.ipynb
+++ b/paper3/forcing/create-TS-based-BCs.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,23 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_climatology(year, month):        \n",
     "    # load year 2015 climatology of ANHA12 gridT file:\n",
-    "    df_gridT = xr.open_dataset(f'/data/brogalla/ANHA12/new_averages/gridT_{year}_{month}.nc')\n",
-    "    \n",
-    "    bdy_temp = df_gridT['votemper'].values[:,:,:]\n",
-    "    bdy_sal  = df_gridT['vosaline'].values[:,:,:]\n",
-    "    \n",
-    "    return bdy_temp, bdy_sal"
+    "    with xr.open_dataset(f'/data/brogalla/ANHA12/new_averages/gridT_{year}_{month}.nc') as df_gridT:    \n",
+    "        return df_gridT['votemper'].values[:,:,:], df_gridT['vosaline'].values[:,:,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_AO_BC(bdy_temp, bdy_sal):\n",
     "    # Pb end-members:\n",
     "    PML_Pb   = 3e-12   # Polar Mixed Layer Pb\n",
-    "    ACW_Pb   = 8e-12  # Alaskan Coastal Water Pb\n",
-    "    wBSW_Pb  = 3e-12   # Winter Bering Sea Water Pb\n",
+    "    ACW_Pb   = 10e-12  # Alaskan Coastal Water Pb\n",
+    "    wBSW_Pb  = 4e-12   # Winter Bering Sea Water Pb\n",
     "    AL_Pb    = 5e-12   # Atlantic Water Pb\n",
-    "    CBDW_Pb  = 2e-12   # Canada Basin deep water Pb\n",
+    "    CBDW_Pb  = 3e-12   # Canada Basin deep water Pb\n",
     "    \n",
     "    PML_sal   = 29      # Polar mixed layer salinity max\n",
     "    PML_temp  = 0       # Polar mixed layer temperature\n",
@@ -252,18 +248,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_HB_BC(bdy_temp, bdy_sal):\n",
-    "#     # Pb end-members: original\n",
-    "#     PML_Pb   = 3e-12   # Polar Mixed Layer Pb\n",
-    "#     AL_Pb    = 5e-12   # Atlantic Water Pb\n",
+    "    # Pb end-members: original\n",
+    "    PML_Pb   = 3e-12   # Polar Mixed Layer Pb\n",
+    "    AL_Pb    = 5e-12   # Atlantic Water Pb\n",
     "\n",
-    "    # Pb end-members: sensitivity experiment\n",
-    "    PML_Pb   = 5e-12   # Polar Mixed Layer Pb\n",
-    "    AL_Pb    = 10e-12   # Atlantic Water Pb\n",
+    "#     # Pb end-members: sensitivity experiment\n",
+    "#     PML_Pb   = 5e-12   # Polar Mixed Layer Pb\n",
+    "#     AL_Pb    = 10e-12   # Atlantic Water Pb\n",
     "    \n",
     "    PML_sal   = 29      # Polar mixed layer salinity max\n",
     "    AL_sal    = 34.8    # Atlantic Water salinity min\n",
@@ -278,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +323,7 @@
     "            \"x4\": np.zeros(np.max(dPb_west_BC.shape))\n",
     "        },\n",
     "    )\n",
-    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/Hudson_Bay_sensitivity/Pb_OBC_y{year}m{month:02}.nc', \\\n",
+    "    file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202303/Pb_OBC_y{year}m{month:02}.nc', \\\n",
     "                         unlimited_dims='time_counter')\n",
     "#     file_write.to_netcdf(f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/Labrador_Sea_sensitivity/Pb_OBC_y{year}m{month:02}.nc', \\\n",
     "#                          unlimited_dims='time_counter')\n",
@@ -344,49 +340,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2002\n",
+      "2010\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n",
-      "2003\n",
+      "2011\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n",
-      "2004\n",
+      "2012\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n",
-      "2005\n",
+      "2013\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n",
-      "2006\n",
+      "2014\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n",
-      "2007\n",
+      "2015\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n",
-      "2008\n",
+      "2016\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
       "West BC # of NaNs:  0\n",
-      "2009\n",
+      "2017\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2018\n",
+      "North BC # of NaNs: 0\n",
+      "East BC # of NaNs:  0\n",
+      "South BC # of NaNs: 0\n",
+      "West BC # of NaNs:  0\n",
+      "2019\n",
       "North BC # of NaNs: 0\n",
       "East BC # of NaNs:  0\n",
       "South BC # of NaNs: 0\n",
@@ -395,7 +401,7 @@
     }
    ],
    "source": [
-    "for year in range(2002,2010):\n",
+    "for year in range(2010,2020):\n",
     "\n",
     "    print(year)\n",
     "    LS_T  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));     LS_S  = np.zeros((12,50,bdy_LS[1]-bdy_LS[0],bdy_LS[3]-bdy_LS[2]));\n",
