--- a/paper3/animation-Atlantic.ipynb
+++ b/paper3/animation-Atlantic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Produce grid of monthly Pb fields"
+    "# Animation of Pb concentrations"
    ]
   },
   {
@@ -21,8 +21,8 @@
     "import pickle\n",
     "import matplotlib\n",
     "import xarray as xr\n",
+    "import imageio\n",
     "import glob\n",
-    "import matplotlib.backends.backend_pdf\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -76,24 +76,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob.glob(f'/data/brogalla/run_storage/Pb-tuning-202302/Pb-Hudson-Bay-2002_20230217/ANHA12_EXH006_5d_*')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "years  = np.arange(2002,2009,1)\n",
+    "years  = np.arange(2002,2020,1) \n",
     "files1 = []; files2 = [];\n",
     "for year in years:\n",
-    "    folder1 = f'/data/brogalla/run_storage/Pb-tuning-202302/Pb-Hudson-Bay-{year}_20230217/'\n",
-    "    folder2 = f'/data/brogalla/run_storage/Pb-tuning-202302/Pb-Labrador-Sea-{year}_20230217/'\n",
+    "    folder1 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-reference-{year}_20230308/'\n",
+    "    folder2 = f'/data/brogalla/run_storage/Pb-reference-202303/Pb-Labrador-Sea-{year}_20230308/'\n",
     "        \n",
     "    files1 = np.append(files1, np.sort(glob.glob(f'{folder1}/ANHA12_EXH006_5d_*')))\n",
     "    files2 = np.append(files2, np.sort(glob.glob(f'{folder2}/ANHA12_EXH006_5d_*')))"
@@ -101,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,17 +123,18 @@
     "    with xr.open_dataset(f'{file2}') as f:\n",
     "        f2 = f['dissolpb'].values[0,layer,:,:]\n",
     "    \n",
-    "    CB = proj1.pcolormesh(x, y, (f2-f1)*1e12, cmap=cmocean.cm.thermal, vmin=vmin, vmax=vmax, ax=ax, rasterized=True) \n",
+    "    CB = proj1.pcolormesh(x, y, (f2-f1)*1e12, cmap=cmocean.cm.rain, vmin=vmin, vmax=vmax, ax=ax, rasterized=True) \n",
     "   \n",
-    "    proj1.contourf(x, y, bathy_masked[layer,imin:imax,jmin:jmax], colors=[land_color], zorder=2, ax=ax) # Mask land at particular depth\n",
+    "    proj1.contourf(x, y, bathy_masked[layer,imin:imax,jmin:jmax], colors=[land_color], zorder=1, ax=ax) # Mask land at particular depth\n",
     "\n",
     "    ax.set_title(f'{dates1[n]}', fontsize=6)\n",
     "    \n",
     "    # Color bar: --------------------------------------------------------------------------------\n",
     "    cbaxes = fig.add_axes([0.10, 0.15, 0.02, 0.38]);\n",
     "    CBar   = plt.colorbar(CB, cax=cbaxes); \n",
-    "    CBar.set_label('Dissolved Pb [pM]', fontsize=7)\n",
+    "    CBar.set_label(r'$\\Delta$ Dissolved Pb [pM]', fontsize=7)\n",
     "    CBar.ax.tick_params(axis='y', length=0, labelsize=7)\n",
+    "    CBar.ax.set_yticklabels(['0','0.2','0.4','0.6','0.8','>1.0']) \n",
     "    return fig"
    ]
   },
@@ -157,26 +149,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "depth = 10\n",
-    "fig_store = {}\n",
+    "depth = 32 #10, 25, 30, 32\n",
     "for n, date in enumerate(dates1):\n",
-    "    fig_store[f'{date}'] = plot_layer(files1[n], files2[n], n, layer=depth, vmin=0, vmax=1)    "
+    "    fig = plot_layer(files1[n], files2[n], n, layer=depth, vmin=0, vmax=1)    \n",
+    "    fig.savefig(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-animation-z{depth}-{date[0:8]}.png', dpi=300)\n",
+    "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf = matplotlib.backends.backend_pdf.PdfPages(\"/ocean/brogalla/GEOTRACES/figures/Pb-Baffin-Bay-Atlantic.pdf\")\n",
-    "for date in dates1:\n",
-    "    pdf.savefig(fig_store[f'{date}'])\n",
-    "pdf.close()"
+    "layer = 10\n",
+    "\n",
+    "#https://stackoverflow.com/questions/753190/programmatically-generate-video-or-animated-gif-in-python\n",
+    "filenames = np.sort(glob.glob(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-animation-z{layer}-*'))\n",
+    "with imageio.get_writer(f'/ocean/brogalla/GEOTRACES/figures/Pb/animation/Atlantic-z{layer}.mp4', \n",
+    "                        macro_block_size = None, fps=7, mode='I') as writer:\n",
+    "    for filename in filenames:\n",
+    "        image = imageio.imread(filename)\n",
+    "        writer.append_data(image)"
    ]
   },
   {
