messing around with combining Pb model source component display items

--- a/paper3/R4-components.ipynb
+++ b/paper3/R4-components.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "import datetime as dt\n",
     "import os\n",
     "from itertools import compress\n",
+    "from mpl_toolkits.basemap import Basemap\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +51,14 @@
     "# model result set:\n",
     "folder_base = '/data/brogalla/run_storage/Pb-reference-202303/'\n",
     "\n",
-    "colors = ['#ccb598', '#448d90', '#739f78', '#CC8741', '#cee7fd', '#b9c1c7']"
+    "colors  = ['#bea385','#bea385','#bacbda','#bacbda','#a0a3a3','#67b1b5','#337d80', '#7b5a48']\n",
+    "land_color         = '#a9a7a2'\n",
+    "land_outline_color = '#373736'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -514,13 +517,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors  = ['#bea385','#bea385','#bacbda','#bacbda',\n",
-    "           '#a0a3a3','#67b1b5','#337d80', '#7b5a48']\n",
-    "\n",
     "# patterns=['','xxxxxxx','','xxxxxxx','','', '']\n",
     "patterns=['','...','','...','','', '','']\n",
     "\n",
@@ -530,33 +530,6 @@
     "\n",
     "mpl.rcParams['hatch.linewidth'] = 0.5\n",
     "mpl.rcParams['hatch.color']     = 'k'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 251,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['atm_dust',\n",
-       " 'atm_bc',\n",
-       " 'ice_dust',\n",
-       " 'ice_bc',\n",
-       " 'sed_ice',\n",
-       " 'runoff',\n",
-       " 'part_runoff',\n",
-       " 'resus']"
-      ]
-     },
-     "execution_count": 251,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keys"
    ]
   },
   {
@@ -626,121 +599,6 @@
     "plt.tight_layout(h_pad=-10)\n",
     "\n",
     "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb/R4-source-components.jpg', dpi=300, bbox_inches='tight')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Calculate inflow/outflow through the boundaries\n",
-    "Boundaries:\n",
-    "- western Canada Basin\n",
-    "- northern Canada Basin\n",
-    "- Labrador Sea\n",
-    "- Hudson Bay"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin \n",
-    "bdy_WCB = (2168,2178,390,797) # Western Canada Basin \n",
-    "bdy_LS  = (1140,1150,446,672) # Baffin Bay\n",
-    "bdy_HB  = (1190,1472,293,303) # Hudson Bay"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def file_dates(year):\n",
-    "    #start_date and end_date are datetime objects\n",
-    "    start_date = dt.datetime(year,1,1)\n",
-    "    end_date   = dt.datetime(year,12,31)\n",
-    "\n",
-    "    file_list1 = np.sort(os.listdir(f'/data/brogalla/run_storage/Pb-reference-202303/Pb-reference-{year}_20230308/'))\n",
-    "    file_list2 = np.sort(os.listdir('/data/brogalla/ANHA12/'))\n",
-    "    \n",
-    "    Vlist = [i[26:31]=='gridV' for i in file_list2]\n",
-    "    gridV_list = list(compress(file_list2, Vlist))\n",
-    "    dateV_list = [dt.datetime.strptime(i[14:25], \"y%Ym%md%d\") for i in gridV_list]\n",
-    "    gridV_file_list = list(compress(gridV_list, [V > start_date and V < end_date for V in dateV_list]))\n",
-    "    \n",
-    "    dates = [dt.datetime.strptime(i[14:25], \"y%Ym%md%d\") for i in gridV_file_list]\n",
-    "    \n",
-    "    return dates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dates_2002 = file_dates(2002)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# estimate at a transect at the edge of the boundary\n",
-    "# Need: dPb concentration and flow volume \n",
-    "# mol/L * m3 / s * 1e3 L/m3 = mol/s * 3600*24*days_in_month = mol / month (sum over year) --> mol/yr *1e-6 = Mmol/yr\n",
-    "\n",
-    "def calc_transports(ts):\n",
-    "    # sum over transect\n",
-    "    fday   = np.nansum(ts*1e3*(5*3600*24), axis=(1,2)) # mol m3/L s --> mol /s by multiplying by 1e3 --> mol/5 days\n",
-    "    annual = np.nansum(fday, axis=(0))*1e-6  # mol/yr --> Mmol/yr\n",
-    "    return fday, annual"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year = 2002\n",
-    "base = '/ocean/brogalla/GEOTRACES/time-series/Pb-model/Pb-reference-202303/'\n",
-    "ts_nCB, ts_wCB, ts_HB, ts_LS = pickle.load(open(f'{base}time-series-{year}.pickle','rb'))  \n",
-    "\n",
-    "fday_nCB, annual_nCB = calc_transports(ts_nCB) \n",
-    "fday_wCB, annual_wCB = calc_transports(ts_wCB)\n",
-    "fday_HB , annual_HB  = calc_transports(ts_HB) \n",
-    "fday_LS , annual_LS  = calc_transports(ts_LS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Addition of Pb from boundaries (Mmol/yr):\n",
-      "Northern Canada Basin --- -0.332\n",
-      "Western Canada Basin  --- -0.005\n",
-      "Hudson Bay            --- -0.004\n",
-      "Labrador Sea          --- 1.174\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Addition of Pb from boundaries (Mmol/yr):')\n",
-    "print(f'Northern Canada Basin --- {annual_nCB:.3f}')\n",
-    "print(f'Western Canada Basin  --- {annual_wCB:.3f}')\n",
-    "print(f'Hudson Bay            --- {annual_HB:.3f}')\n",
-    "print(f'Labrador Sea          --- {annual_LS:.3f}')"
    ]
   }
  ],
